// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Post snapshot tests > Second test 1`] = `
<DocumentFragment>
  <div
    data-testid="post-container"
  >
    <h2>
      Some Other user:
    </h2>
    <p>
      Some Other Content
    </p>
    <p>
      Footer
    </p>
  </div>
</DocumentFragment>
`;

exports[`Post snapshot tests > initial test 1`] = `
<DocumentFragment>
  <div
    data-testid="post-container"
  >
    <h2>
      Some user:
    </h2>
    <p>
      Some Content
    </p>
    <p>
      Footer
    </p>
  </div>
</DocumentFragment>
`;
